Cloud and search bar ui issue resolved

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
              </form>
 
              <!--Loading Screen Container-->
-             <div class="loading-container">
+             <div class=" sub-container loading-container">
                 <img src="assets/loading.gif" width="150" height="150">
                 <p>Loading</p>
              </div>
 
-             <div class="weather-full-container">
+             <div class="sub-container weather-full-container">
                 <div class="name">
                     <p data-cityName></p>
                     <img data-countryFlg>
@@ -64,7 +64,7 @@
                     <div class="parameter">
                         <img src="./assets/cloud.png" >
                         <p>Clouds</p>
-                        <p data-cloud></p>
+                        <p data-cloud>Ye mein hu</p>
                     </div>
                 </div>
              </div>
